fixed horizontal scrollbar

--- a/main.css
+++ b/main.css
@@ -51,7 +51,7 @@ h3{
     position: absolute;
     left: 0px;
     top: 170px;
-    width: 100vw;
+    width: 100%;
     z-index: 2;
     text-align: center;
 }
@@ -96,7 +96,7 @@ nav{
     left: 0;
     z-index: 3;
     background-color: #212121;
-    width: 100vw;
+    width: 100%;
 }
 
 /* de linkjes in de nav */
@@ -173,7 +173,7 @@ nav a{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    width: 100vw;
+    width: 100%;
     margin: 80px 0;
 }
 
